Update to newest version of pytorch and other packages. Conflict and circular break resolution. Possible conflicts between PyTorch Lightning and PyTorch.

--- a/autoencoding.ipynb
+++ b/autoencoding.ipynb
@@ -40,11 +40,14 @@
     }
    ],
    "source": [
-    "device = 'cuda:1'\n",
+    "#device = 'cuda:1'\n",
+    "device = 'cuda:0'\n",
     "conf = ffhq256_autoenc()\n",
     "# print(conf.name)\n",
     "model = LitModel(conf)\n",
-    "state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu')\n",
+    "#state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu')\n",
+    "state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu',\n",
+    "weights_only=False)\n",
     "model.load_state_dict(state['state_dict'], strict=False)\n",
     "model.ema_model.eval()\n",
     "model.ema_model.to(device);"
