--- a/manipulate.ipynb
+++ b/manipulate.ipynb
@@ -42,11 +42,13 @@
     }
    ],
    "source": [
-    "device = 'cuda:3'\n",
+    "#device = 'cuda:3'\n",
+    "device = 'cuda:0'\n",
     "conf = ffhq256_autoenc()\n",
     "# print(conf.name)\n",
     "model = LitModel(conf)\n",
-    "state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu')\n",
+    "state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu',\n",
+    "                   weights_only=False)\n",
     "model.load_state_dict(state['state_dict'], strict=False)\n",
     "model.ema_model.eval()\n",
     "model.ema_model.to(device);"
@@ -79,7 +81,7 @@
     "cls_conf = ffhq256_autoenc_cls()\n",
     "cls_model = ClsModel(cls_conf)\n",
     "state = torch.load(f'checkpoints/{cls_conf.name}/last.ckpt',\n",
-    "                    map_location='cpu')\n",
+    "                    map_location='cpu',weights_only=False)\n",
     "print('latent step:', state['global_step'])\n",
     "cls_model.load_state_dict(state['state_dict'], strict=False);\n",
     "cls_model.to(device);"
@@ -102,7 +104,9 @@
    "outputs": [],
    "source": [
     "data = ImageDataset('imgs_align', image_size=conf.img_size, exts=['jpg', 'JPG', 'png'], do_augment=False)\n",
-    "batch = data[1]['img'][None]"
+    "#batch = data[1]['img'][None]\n",
+    "print(data[0])\n",
+    "batch = data[0]['img'][None]"
    ]
   },
   {
