--- a/sample.ipynb
+++ b/sample.ipynb
@@ -45,13 +45,14 @@
     }
    ],
    "source": [
-    "device = 'cuda:3'\n",
+    "#device = 'cuda:3'\n",
+    "device = 'cuda:0'\n",
     "conf = ffhq256_autoenc_latent()\n",
     "conf.T_eval = 100\n",
     "conf.latent_T_eval = 100\n",
     "# print(conf.name)\n",
     "model = LitModel(conf)\n",
-    "state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu')\n",
+    "state = torch.load(f'checkpoints/{conf.name}/last.ckpt', map_location='cpu',weights_only=False)\n",
     "print(model.load_state_dict(state['state_dict'], strict=False))\n",
     "model.to(device);"
    ]
